# pico-de-gallo

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  opencode.json
.github/: .release-please-manifest.json  copilot-instructions.md  pull_request_template.md  release-please-config.json
.github/workflows/: check.yml  release-crates.yml  release-ffi.yml  release-firmware.yml  release-please.yml
.opencode/agent/: architect.md  coder.md  coordinator.md  docs.md  integrator.md  reliability.md  reviewer.md  tester.md
book/src/: SUMMARY.md  ffi.md  gallo-crates.md  getting-started.md  introduction.md  onewire.md  transaction-batching.md
book/src/appendix/: endpoints.md  status-codes.md  troubleshooting.md
book/src/crates/: app.md  ffi.md  hal.md  lib.md  overview.md  python.md
book/src/driver/: blocking-vs-async.md  codegen.md  ergonomic-api.md  explore.md  index.md  publishing.md  register-interface.md  scaffold.md  testing.md
book/src/getting-started/: install.md  usb.md  verify.md
book/src/hardware/: assembly.md  overview.md  pinout.md  revisions.md
book/src/interfaces/: adc.md  batching.md  gpio.md  i2c.md  onewire.md  pwm.md  spi.md  uart.md
book/src/internals/: architecture.md  firmware.md  releases.md  wire-protocol.md
crates/pico-de-gallo-app/: CHANGELOG.md  Cargo.toml
crates/pico-de-gallo-app/src/: lib.rs
crates/pico-de-gallo-ffi/: CHANGELOG.md  Cargo.toml
crates/pico-de-gallo-ffi/src/: lib.rs
crates/pico-de-gallo-firmware/: CHANGELOG.md  Cargo.toml
crates/pico-de-gallo-firmware/src/: main.rs
crates/pico-de-gallo-firmware/src/handlers/: gpio.rs
crates/pico-de-gallo-hal/: CHANGELOG.md  Cargo.toml  README.md
crates/pico-de-gallo-hal/examples/: epd2in13b.rs  is31fl3743b.rs
crates/pico-de-gallo-hal/src/: lib.rs
crates/pico-de-gallo-internal/: CHANGELOG.md  Cargo.toml  build.rs
crates/pico-de-gallo-internal/src/: lib.rs
crates/pico-de-gallo-lib/: CHANGELOG.md  Cargo.toml
crates/pico-de-gallo-lib/examples/: i2c.rs
crates/pico-de-gallo-lib/src/: lib.rs
crates/pyco-de-gallo/: CHANGELOG.md  Cargo.toml
crates/pyco-de-gallo/examples/: README.md  tmp108_live.py  tmp108_read.py
crates/pyco-de-gallo/src/: lib.rs
