[package]
name = "pico-de-gallo-ffi"
version = "0.2.0"
edition = "2024"
description = "C-FFI for Pico de Gallo device"
readme = "README.md"
categories = ["api-bindings", "embedded", "hardware-support"]
keywords = ["binding", "ffi", "c", "pico-de-gallo"]
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/pico-de-gallo"

[dependencies]
futures = "0.3.31"
pico-de-gallo-lib = { version = "0.2.0", path = "../pico-de-gallo-lib" }

[build-dependencies]
cbindgen = "0.29"

[lib]
crate-type = ["cdylib", "lib"]
