[package]
name = "pico-de-gallo-ffi"
version = "0.7.0"
edition = "2024"
rust-version = "1.90"
description = "C-FFI for Pico de Gallo device"
readme = "README.md"
categories = ["api-bindings", "embedded", "hardware-support"]
keywords = ["binding", "ffi", "c", "pico-de-gallo"]
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/pico-de-gallo"
documentation = "https://docs.rs/pico-de-gallo-ffi"

[dependencies]
futures = "0.3.32"
pico-de-gallo-lib = { version = "0.6.0", path = "../pico-de-gallo-lib" }

[build-dependencies]
cbindgen = "0.29.2"

[lib]
crate-type = ["cdylib", "lib"]
