[package]
name = "pico-de-gallo-fw"
version = "0.4.1"
edition = "2024"
license = "MIT"
rust-version = "1.89"
description = "Pico de Gallo firmware"
repository = "https://github.com/OpenDevicePartnership/pico-de-gallo"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = "0.3"
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1"
embassy-rp = { version = "0.6.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
heapless = "0.9.1"
panic-probe = "1.0.0"
pico-de-gallo-internal = { version = "0.1.0", path = "../pico-de-gallo-internal" }
postcard-rpc = { version = "0.11",   features = ["embassy-usb-0_5-server"] }
static_cell = "2.1.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
