[package]
name = "pico-de-gallo-firmware"
version = "0.9.0"
edition = "2024"
license = "MIT"
rust-version = "1.90"
description = "Pico de Gallo firmware"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embassy", "rp2350", "pico-de-gallo", "firmware"]
repository = "https://github.com/OpenDevicePartnership/pico-de-gallo"

[features]
default = ["hw-rev1"]
hw-rev1 = []
hw-rev2 = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embassy-embedded-hal = "0.6"
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1"
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
fixed = "1.28.0"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.5", features = ["defmt"] }
# Pin embassy-usb-driver to 0.2.0: 0.2.1 bumped embedded-io-async to 0.7,
# which breaks embassy-usb 0.5.1's CDC-ACM impl (still on 0.6).
embassy-usb-driver = "=0.2.0"
embedded-io-async = "0.7.0"
panic-probe = "1.0.0"
pico-de-gallo-internal = { version = "0.5.0", path = "../pico-de-gallo-internal" }
postcard = { version = "1", default-features = false }
postcard-rpc = { version = "0.12",   features = ["embassy-usb-0_5-server"] }
static_cell = "2.1.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
