[package]
name = "pico-de-gallo-hal"
version = "0.2.0"
edition = "2024"
description = "embedded-hal and embedded-hal-async implementation for Pico de Gallo"
readme = "README.md"
categories = ["embedded", "hardware-support",]
keywords = ["embedded-hal", "embedded-hal-async", "pico-de-gallo"]
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/pico-de-gallo"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
pico-de-gallo-lib = { version = "0.2.0", path = "../pico-de-gallo-lib" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
epd-waveshare = "0.6.0"
is31fl3743b-driver = { version = "0.1.1", features = ["is_blocking"] }
mpu6050-dmp = "0.6.1"
shtcx = "1.0.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time", "macros"] }
