[package]
name = "pico-de-gallo-internal"
version = "0.2.1"
edition = "2024"
description = "Internal library for Pico de Gallo. Do not use!"
categories = ["embedded", "hardware-support",]
readme = "README.md"
keywords = ["embedded-hal", "embedded-hal-async", "pico-de-gallo"]
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/pico-de-gallo"

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
postcard-rpc = "0.11"
postcard-schema = { version = "0.2.5", features = ["derive"] }

[dev-dependencies]
postcard = { version = "1", features = ["alloc"] }

[features]
use-std = ["postcard-rpc/use-std"]
