[package]
name = "pico-de-gallo-internal"
version = "0.3.1"
edition = "2024"
rust-version = "1.90"
description = "Internal library for Pico de Gallo. Do not use!"
categories = ["embedded", "hardware-support",]
readme = "README.md"
keywords = ["embedded-hal", "embedded-hal-async", "pico-de-gallo"]
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/pico-de-gallo"
documentation = "https://docs.rs/pico-de-gallo-internal"

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false }
postcard-rpc = "0.12"
postcard-schema = { version = "0.2.5", features = ["derive"] }

[dev-dependencies]
postcard = { version = "1", features = ["alloc"] }

[features]
use-std = ["postcard-rpc/use-std", "postcard/alloc"]
