[package]
name = "pico-de-gallo-lib"
version = "0.6.0"
edition = "2024"
rust-version = "1.90"
description = "High-level library to communicate with Pico de Gallo device"
readme = "README.md"
categories = ["embedded", "hardware-support",]
keywords = ["embedded-hal", "embedded-hal-async", "pico-de-gallo"]
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/pico-de-gallo"
documentation = "https://docs.rs/pico-de-gallo-lib"

[dependencies]
embedded-hal = "1.0.0"
pico-de-gallo-internal = { version = "0.6.0", path = "../pico-de-gallo-internal", features = ["use-std"] }
postcard-rpc = { version = "0.12", features = ["use-std", "raw-nusb"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
nusb = "0.1.9"

[dev-dependencies]
postcard = "1"
