[package]
name = "pyco-de-gallo"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[lib]
name = "pyco_de_gallo"
crate-type = ["cdylib"]

[dependencies]
pico-de-gallo-lib = { version = "0.4.0", path = "../pico-de-gallo-lib" }
pyo3 = "0.28"
tokio = { version = "1.52.1", features = ["rt"] }
