[package]
name = "pyco-de-gallo"
version = "0.3.0"
edition = "2024"
rust-version = "1.90"
license = "MIT"
publish = false

[lib]
name = "pyco_de_gallo"
crate-type = ["cdylib"]

[dependencies]
pico-de-gallo-lib = { version = "0.6.0", path = "../pico-de-gallo-lib" }
pyo3 = "0.28"
tokio = { version = "1.52.3", features = ["rt"] }
